# UVa-Online-Judge

./: .gitignore  CMakeLists.txt  README.md
100/: main.cpp
10038/: main.cpp
10055/: main.cpp
10071/: main.cpp
10300/: main.cpp
136/: main.cpp
414/: main.cpp
458/: main.cpp
490/: main.cpp
494/: main.cpp
