cmake_minimum_required(VERSION 3.17)
project(UVa_OnlineJudge)

set(CMAKE_CXX_STANDARD 11)

# add_executable(UVa_OnlineJudge main.cpp)
add_executable(100 100/main.cpp)
#add_executable(101 101/main.cpp)
add_executable(136 136/main.cpp)

add_executable(414 414/main.cpp 414/main.cpp)
add_executable(458 458/main.cpp)
add_executable(490 490/main.cpp)
add_executable(494 494/main.cpp)

add_executable(10038 10038/main.cpp)
add_executable(10055 10055/main.cpp)
add_executable(10071 10071/main.cpp)

add_executable(10300 10300/main.cpp)
